--- a/WebX/Lab3/index2.html
+++ b/WebX/Lab3/index2.html
@@ -12,7 +12,7 @@
         <form name="form1">
             <p>Email: <input type="email" name="email" ng-model="email" ></p>
             <p>Name: <input type="text" name="name" ng-model="name" ></p>
-
+            <p>Salary: <input type="number" ng-model="salary"></p>
             <p>Select Your Age Group</p>
             <input type="radio" ng-model="AgeGroup" value="0-10">0-10
             <br>
@@ -68,6 +68,9 @@
             </div>
             <div ng-show="reactjs">
                 ReactJs
+            </div>
+            <div>
+                <p>Salary is {{salary | currency}}</p>
             </div>
         </div>
         <p ng-mouseover="hoverfun()">Show Details</p>
